# FlashMLA

./: .gitignore  LICENSE_MX  MANIFEST.in  README.md  README_MX.md  pyproject.toml  requirements.txt  setup.py
benchmark/: bench_flash_mla.py  bench_sm80_decode.py  profile_decode_step.py
csrc/: flash_api.cpp  flash_fwd_mla_kernel.h  params.h  pybind.cpp  softmax.h  utils.h
csrc/api/: api.cpp  common.h  dense_decode.h  sparse_decode.h  sparse_fwd.h
csrc/kernels/: fp8_transpose_v.h  get_mla_metadata.h  mla_combine.cu  mla_combine.h  params.h  splitkv_mla.cu  splitkv_mla.h  traits.h  utils.h
csrc/sm100/: fmha_cutlass_bwd_sm100.cuh  fmha_cutlass_fwd_sm100.cu  fmha_cutlass_fwd_sm100.cuh  fmha_cutlass_mla_fwd_sm100.cuh
csrc/sm100/common/: utils.hpp
csrc/sm100/decode/head64/: kernel.cuh
csrc/sm100/decode/sparse_fp8/: splitkv_mla.cu
csrc/sm100/decode/sparse_fp8_smallbatch/: dequant.h  splitkv_mla.cu  splitkv_mla.h
csrc/sm100/prefill/dense/collective/: sm100_fmha_fwd_epilogue_tma_warpspecialized.hpp
csrc/sm100/prefill/sparse/: fwd.cu
csrc/sm80/: utils.cuh
csrc/sm80/decode/dense/: config.h  splitkv_mla.cuh  splitkv_mla.h  traits.h
csrc/sm90/: flash_api.cpp
csrc/sm90/decode/dense/: fp8_transpose_v.h  splitkv_mla.h  splitkv_mla_fp8.cu  traits.h
csrc/sm90/kernels/: get_mla_metadata.cu  mla_combine.cu  params.h  splitkv_mla.cu  traits.h
csrc/sm90/prefill/sparse/: config.h  fwd.cu  phase1.cuh  phase1.h
csrc/smxx/: mla_combine.cu
csrc/smxx/decode/combine/: combine.cu
csrc/smxx/decode/get_decoding_sched_meta/: get_decoding_sched_meta.cu
docs/: 20250422-new-kernel-deep-dive.md  FAQ.md  TENSOR_SHAPES.md  TROUBLESHOOTING.md
flash_mla/: __init__.py  flash_mla_cuda.pyi  flash_mla_interface.py
tests/: lib.py  metadata_demo.py  quant.py  test_flash_mla_prefill.py  test_flash_mla_sm100_sparse_decode.py  test_fmha_sm100.py  test_fp8.py  test_fp8_flash_mla.py  test_multi_gpu_device_guard.py  test_window.py
tests/kernelkit/: README.md  __init__.py  stress.py
(+17 files in other folders)
